# Techathon2026-A-cube

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: __init__.py  alerts.py  bot.py  config.py  database.py  main.py  models.py  simulator.py
discord/: .env.example  Modelfile  Modelfile.intent  Modelfile.respond  README.md  ai.py  alert.py  bot.py  cmd.py
docs/: api.md  deployment.md
hardware schematic/: led.ino
static/: app.js  index.html  styles.css
